# core-mcp-servers

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: .github.env
.github/workflows/: build-artifacts.yml  checks.yaml  release.yml
src/gov_uk_acronyms/: Makefile
src/gov_uk_acronyms/code/: main.py  requirements.txt
src/gov_uk_search/: Makefile
src/gov_uk_search/code/: main.py  requirements.txt
src/wikipedia/: Makefile
src/wikipedia/code/: main.py  requirements.txt
terraform/: .terraform.lock.hcl  data.tf  lambdas.tf  locals.tf  main.tf  provider.tf  variables.tf  waf.tf
terraform/modules/mcp-server-lambda/: main.tf  outputs.tf  variables.tf
terraform/spec/: mcpservers-oas30.yaml
terraform/variables/: dev.tfvars  global.tfvars  prod.tfvars
