[project]
name = "core-mcp-servers"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "mcp<=1.22.0",
    "fastmcp<=2.13.1",
    "pydantic<=2.11.7",
    "requests<=2.32.4",
    "wikipedia>=1.4.0",
    "run-mcp-servers-with-aws-lambda>=0.5.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]
